--- a/lib/angio_web/templates/shared/_menu_past_history_tabs.html.eex
+++ b/lib/angio_web/templates/shared/_menu_past_history_tabs.html.eex
@@ -2,9 +2,9 @@
 <% alias Angio.Caths%>
 <% alias Angio.Interventions %>
 <%alias Angio.Histories %>
-<span class="button  is-info is-fullwidth ">
+<div class="menu_tabs history ">
     Past History
- </span>
+ </div>
 <div class="menu_info_coronary_tabs">
   <div class="tabs is-small is-centered">
     <ul>
